k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld-service
spec:
  selector:
    app: springboot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
